Incorrect computation of shrink-to-fit width for block with white-space:nowrap and floating children https://bugs.webkit.org/show_bug.cgi?id=114879

Source/WebCore:

Reviewed by David Hyatt.
Per http://www.w3.org/TR/CSS21/visudet.html#Computing_widths_and_margins when width is auto then floating non-replaced,
absolute non-replaced, and inline-block non-replaced elements should use shrink-to-fit width. This trumps any no-wrap property
on the element so if we are shrinking to fit ensure our minimum width respects all possible line breaks.

Test: fast/block/shrink-to-fit-width-container-with-floating-children.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::computeIntrinsicLogicalWidths):

LayoutTests:

Reviewed by David Hyatt.

* fast/block/shrink-to-fit-width-container-with-floating-children-expected.txt: Added.
* fast/block/shrink-to-fit-width-container-with-floating-children.html: Added.
* platform/qt/fast/css/word-space-extra-expected.txt:
* platform/qt/fast/replaced/width100percent-image-expected.txt:
* platform/qt/fast/replaced/width100percent-searchfield-expected.txt:
* platform/qt/fast/replaced/width100percent-textfield-expected.txt:
* platform/qt/tables/mozilla/bugs/bug57828-expected.txt:


Canonical link: https://commits.webkit.org/135927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151737 268f45cc-cd09-0410-ab3c-d52691b4dbfc